--- a/index.html
+++ b/index.html
@@ -115,17 +115,33 @@
 <footer>
     <div class="footer-content">
         <p>&copy; 2025 NestPlay. Todos os direitos reservados.</p>
+
+        <div class="footer-contact">
+            <p>Email: contato@nestplay.com</p>
+            <p>WhatsApp: (11) 91234-5678</p>
+        </div>
+
+        <div class="footer-links">
+            <a href="#home">Início</a>
+            <a href="#sobre">Sobre</a>
+            <a href="#jogos">Jogos</a>
+            <a href="#contato">Contato</a>
+        </div>
+
+        <div class="footer-credits">
+            <p>Desenvolvido por NestPlay Dev Team</p>
+        </div>
+
         <div class="social-icons">
-           
             <a href="https://discord.com" target="_blank">
                 <img src="discord.png" alt="Discord">
             </a>
         </div>
         <div class="social-icons2">
-         <a href="https://instagram.com" target="_blank">
+            <a href="https://instagram.com" target="_blank">
                 <img src="insta.png" alt="Instagram">
             </a>
-            </div>
+        </div>
     </div>
 </footer>
     <script src="script.js"></script>
