--- a/index.html
+++ b/index.html
@@ -112,25 +112,40 @@
         </form>
     </section>
 <footer>
-    <div class="footer-content">
-        <p>&copy; 2025 NestPlay. Todos os direitos reservados.</p>
-        <div class="social-icons">
-
-              <div class="footer-contact">
-            <p>Email: contato@nestplay.com</p>
-            <p>WhatsApp: (11) 91234-5678</p>
-        </div>
-           
-            <a href="https://discord.com" target="_blank">
-                <img src="discord.png" alt="Discord">
-            </a>
-        </div>
-        <div class="social-icons2">
-         <a href="https://instagram.com" target="_blank">
-                <img src="insta.png" alt="Instagram">
-            </a>
-            </div>
+  <div class="footer-content">
+    <div class="footer-section">
+      <p>&copy; 2025 NestPlay. Todos os direitos reservados.</p>
     </div>
+
+    <div class="footer-section">
+      <p>Email: contato@nestplay.com</p>
+      <p>WhatsApp: (11) 91234-5678</p>
+    </div>
+
+    <div class="footer-section">
+      <p>
+        <a href="#home">Início</a> |
+        <a href="#sobre">Sobre</a> |
+        <a href="#jogos">Jogos</a> |
+        <a href="#contato">Contato</a>
+      </p>
+    </div>
+
+    <div class="footer-section">
+      <p>Desenvolvido por NestPlay Dev Team</p>
+    </div>
+
+    <div class="footer-section">
+      <div class="social-icons">
+        <a href="https://discord.com" target="_blank">
+          <img src="discord.png" alt="Discord">
+        </a>
+        <a href="https://instagram.com" target="_blank">
+          <img src="insta.png" alt="Instagram">
+        </a>
+      </div>
+    </div>
+  </div>
 </footer>
     <script src="script.js"></script>
 </body>
